[package]
name = "lookout"
version = "0.1.0"
authors = ["Raphael Peters <rappet@rappet.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.3"
serde = "1.0"
serde_derive = "1.0"
tera = "0.11"
actix-web = "1.0"
actix-files = "0.1.3"
actix-rt = "0.2.5"
futures = "0.1.29"
derive_more = "0.14.0"